[package]
name = "chuggichain-rs"
version = "0.1.0"
authors = ["Chuggi, Chuggo, Chuggu"]
publish = false
repository = "grusel-opi/chuggichain-rs"
readme = "README.md"

[workspace]
members = ["crypto", "p2p", "storage"]

[dependencies]
bytes = "0.4"
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
getopts = "0.2"
rand = "0.3"
failure = "0.1.5"
chrono = "0.4.7"

crypto = { path = "./crypto" }
p2p = { path = "./p2p" }
storage = { path = "./storage" }
transactions = { path = "./transactions" }
