[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"
authors = ["Fabian Klopfer, Felix Mayer, Stephan Perren"]
publish = false
repository = "SomeUserName1/pir-ss19-homeworks-grp14"
readme = "README.md"


[dependencies]
# Common
serde = { version = "1.0.94", features = ["derive"]}
serde_json = "1.0.39"
serde_derive = "1.0.94"

# Crypto
sha3 = "0.8.2"

# Timestamps
time = "0.1"