[package]
name = "concurrency"
version = "0.1.0"
authors = ["Fabian Klopfer <fabian.klopfer@uni-konstanz.de>", "Felix Mayer", "Stephan Perren"]
edition = "2018"


[dependencies]
easy-hash = "0.1.0"

#![allow(dead_code)]
[[bin]]
name = "channels"
path = "src/channel.rs"

[[bin]]
name = "channels_sol"
path = "src/channel_sol.rs"


#![allow(dead_code)]
[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "threads_sol"
path = "src/threads_sol.rs"


#![allow(dead_code)]
[[bin]]
name = "shared_memory"
path = "src/shared_memory.rs"

[[bin]]
name = "shared_memory_sol"
path = "src/shared_memory_sol.rs"

[[bin]]
name = "exercise"
path = "src/exercise.rs"


