[package]
name = "crypto"
version = "0.1.0"
authors = ["Chuggi, Chuggo, Chuggu"]
workspace = ".."

[dependencies]
sequoia-openpgp = "0.8" # see bottom note
sha3 = "0.8.2"
merkle-sha3 = "0.1.0"
failure = "0.1.5"
rand = "0.6.5"
serde = "1.0.93"
serde_json = "1.0.39"

#### deps for sequoia-openpgp:
# apt install git rustc cargo clang make pkg-config nettle-dev libssl-dev
# capnproto libsqlite3-dev

# if error:
# failed to run custom build command for `nettle-sys v1.0.0
# then => https://github.com/jedahan/chattervan/issues/1
# may need to set ld library path for libnettle.so.7
