[package]
name = "p2p"
version = "0.1.0"
authors = ["Chuggi, Chuggo, Chuggu"]
workspace = ".."

[dependencies]
tokio = "0.1"
tokio-core = "0.1"
futures = "0.1"
tokio-timer = "0.1"
uuid = "0.7.4"
rand = "0.6.5"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.94"

transactions = { path = "../transactions" }
